dev/nginx-initcontainer-sample/nginx_with_init_container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp
  labels:
    app: nginx-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-webapp
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-webapp
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
      # These containers are run during pod initialization
      dnsPolicy: Default
      volumes:
      - name: workdir
        emptyDir: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-webapp
  labels:
    run: nginx-webapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx-webapp
  type: NodePort
